<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.lewmc</groupId>
    <artifactId>kryptonite</artifactId>
    <version>2.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Kryptonite</name>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>com.tchristofferson</pattern>
                                    <shadedPattern>net.lewmc.kryptonite</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.tcoded.folialib</pattern>
                                    <shadedPattern>net.lewmc.kryptonite.lib.folialib</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>net.lewmc.foundry</pattern>
                                    <shadedPattern>net.lewmc.kryptonite.lib.foundry</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>net.lewmc.kryptonite.lib.bstats</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>minebench-repo</id>
            <url>https://repo.minebench.de/</url>
        </repository>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>lewmc</id>
            <name>LewMC Repository</name>
            <url>https://repo.lewmc.net/releases</url>
        </repository>
        <repository>
            <id>lewmc-snapshots</id>
            <name>LewMC Repository</name>
            <url>https://repo.lewmc.net/snapshots</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.6-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.tchristofferson</groupId>
            <artifactId>ConfigUpdater</artifactId>
            <version>2.2</version>
        </dependency>
        <dependency>
            <groupId>de.themoep</groupId>
            <artifactId>inventorygui</artifactId>
            <version>1.6.5-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.technicallycoded</groupId>
            <artifactId>FoliaLib</artifactId>
            <version>0.4.4</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.lewmc</groupId>
            <artifactId>foundry</artifactId>
            <version>1.3.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>lewmc</id>
            <url>https://repo.lewmc.net/releases</url>
        </repository>
        <snapshotRepository>
            <id>lewmc</id>
            <url>https://repo.lewmc.net/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
